
dnl Process this file with autoconf to produce a configure script
AC_INIT(configure.in)
AM_INIT_AUTOMAKE(beatforce , 0.1.0)
AM_CONFIG_HEADER(config.h)

AC_PREFIX_DEFAULT(/usr)

DATADIRNAME=share

have_alsa_final=no
# Checks for programs

AC_PROG_CC
AC_PROG_LIBTOOL


# Checks for libraries
AC_CHECK_LIB(SDL_image,IMG_Load)
AC_CHECK_LIB(fftw3,fftw_execute)

# Check for SDL 
SDL_VERSION=1.2.0
AM_PATH_SDL($SDL_VERSION, 
         :,
         AC_MSG_ERROR([*** SDL version $SDL_VERSION not found!]) 
) 


# Checks for header files
AC_CHECK_HEADERS(SDL.h)
AC_CHECK_HEADERS(sys/asoundlib.h)

#set correct directory
DATADIR=share
AC_SUBST(DATADIR)

PLUGIN_DIR="${ac_default_prefix}/${DATADIR}/${PACKAGE}/plugins"
AC_DEFINE_UNQUOTED( PLUGIN_DIR, "${PLUGIN_DIR}", [Plugin dir])
AC_SUBST(PLUGIN_DIR)

THEME_DIR="${ac_default_prefix}/${DATADIR}/${PACKAGE}/themes"
AC_DEFINE_UNQUOTED( THEME_DIR, "${THEME_DIR}", [Theme dir])
AC_SUBST(THEME_DIR)


AC_OUTPUT([
Makefile
lib/Makefile
lib/src/Makefile
plugins/Makefile
plugins/input/Makefile
plugins/input/mp3-mad/Makefile
plugins/output/Makefile
plugins/output/oss/Makefile
src/Makefile
themes/Makefile
])
