
dnl Process this file with autoconf to produce a configure script
AC_INIT(configure.in)
AM_INIT_AUTOMAKE(beatforce , 0.1.0)
AM_CONFIG_HEADER(config.h)

AC_PREFIX_DEFAULT(/usr)

DATADIRNAME=share

have_alsa_final=no
# Checks for programs

AC_PROG_CC
AC_PROG_LIBTOOL


# Check for SDL 
SDL_VERSION=1.2.0
AM_PATH_SDL($SDL_VERSION, 
         :,
         AC_MSG_ERROR([*** SDL version $SDL_VERSION not found!]) 
) 

# Checks for libraries
AC_CHECK_LIB(SDL_image,IMG_Load)
AC_CHECK_LIB(fftw3,fftw_execute)



# Checks for header files
AC_CHECK_HEADERS(SDL.h)
# AC_CHECK_HEADERS(sys/asoundlib.h)

dnl Check for mad

AC_MSG_CHECKING(for libmad files)
dir=""
maddir=""
for i in $dir /usr /usr/local
do
  if test -f $i/lib/libmad.a && test -f $i/include/mad.h;
  then
    AC_MSG_RESULT(mad libs: $i)
    maddir=$i
    break
  fi
done

if test x$maddir = x
then
 enable_mp3=no
 AC_MSG_WARN(Mad libs not found... disabling mp3 support)
else
 MADDIR=${maddir}
  LIBS="$LIBS -lmad -L$MADDIR/lib"
 CFLAGS="$CFLAGS -I$MADDIR/include -DHAVE_MP3"
fi


#set correct directory
DATADIR=share
AC_SUBST(DATADIR)

PLUGIN_DIR="${ac_default_prefix}/${DATADIR}/${PACKAGE}/plugins"
AC_DEFINE_UNQUOTED( PLUGIN_DIR, "${PLUGIN_DIR}", [Plugin dir])
AC_SUBST(PLUGIN_DIR)

THEME_DIR="${ac_default_prefix}/${DATADIR}/${PACKAGE}/themes"
AC_DEFINE_UNQUOTED( THEME_DIR, "${THEME_DIR}", [Theme dir])
AC_SUBST(THEME_DIR)


AC_OUTPUT([
Makefile
lib/Makefile
lib/src/Makefile
plugins/Makefile
plugins/input/Makefile
plugins/input/mp3-mad/Makefile
plugins/output/Makefile
plugins/output/oss/Makefile
src/Makefile
themes/Makefile
])
