

noinst_LIBRARIES = libSDLTk.a

AM_CPPFLAGS = -Wall

libSDLTk_a_SOURCES = \
 SDL_Signal.c       SDL_Signal.h       \
 SDL_Widget.c       SDL_Widget.h       \
 SDL_WidTool.c      SDL_WidTool.h      \
 SDL_Window.c       SDL_Window.h       \
 SDL_Table.c        SDL_Table.h        \
 SDL_Tree.c         SDL_Tree.h         \
 SDL_Tab.c          SDL_Tab.h          \
 SDL_ToggleButton.c SDL_ToggleButton.h \
 SDL_Button.c       SDL_Button.h       \
 SDL_Slider.c       SDL_Slider.h       \
 SDL_Label.c        SDL_Label.h        \
 SDL_Scrollbar.c    SDL_Scrollbar.h    \
 SDL_Edit.c         SDL_Edit.h         \
 SDL_Panel.c        SDL_Panel.h        \
 SDL_VolumeBar.c    SDL_VolumeBar.h    \
 SDL_Primitives.c   SDL_Primitives.h   \
 SDL_ProgressBar.c  SDL_ProgressBar.h  \
 SDL_Menu.c         SDL_Menu.h         \
 SDL_Tooltip.c      SDL_Tooltip.h      \
                                       \
 SDL_DefFont.c      SDL_DefFont.h      \
 SDL_Font.c         SDL_Font.h         \
 SDL_FontFNT.c      SDL_FontFNT.h      \
 SDL_FontBDF.c      SDL_FontBDF.h     

libSDLTk_a_LIBADD   = 
